@@ -23,6 +23,7 @@ Bugs fixed:
 - 3528096 Error status codes sometimes not propigated for instances
 - 3529856 httpProcs limit can be broken
 - 3527620 EnumerateClasses does not include qualifiers by default
+- 3532951 Filter creation fails with disable default properties
 
 Changes in 1.3.14
 =================
