@@ -1,3 +1,8 @@
+2012-06-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* interopProvider.c:
+	[ 3532951 ] Filter creation fails with disable default properties
+
 2012-06-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* control.h, indCIMXMLExport.c, sfcb.cfg.pre.in:
